--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -3,28 +3,47 @@
 @use "../styles/breakpoints";
 
 .header {
-  margin: 0 2rem;
-  padding: 1rem;
+  position: fixed;
+  width: 100%;
+  padding: variables.$base-padding;
   display: flex;
   justify-content: space-between;
   align-items: center;
   // box-shadow: variables.$base-box-shadow;
   color: map-get(variables.$light-theme-colors, "font-color");
+  background-color: map-get(variables.$light-theme-colors, "bg-color");
+  z-index: 99;
 
-  a {
+  .logo {
+    z-index: 1;
+    font-family: variables.$secondary-font;
     cursor: pointer;
     text-transform: uppercase;
     font-weight: 500;
     font-size: variables.$font-size-lg;
+    letter-spacing: 0.5rem;
     color: map-get(variables.$light-theme-colors, "font-color");
 
     span {
+      font-family: variables.$primary-font;
       font-size: variables.$font-size-sm;
-      font-weight: 800;
+      font-weight: 500;
+      text-transform: capitalize;
+      letter-spacing: normal;
     }
   }
 
+  .category {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 100%;
+    @include grid.base-flex-container;
+    margin: 0 auto;
+  }
+
   .utility {
+    z-index: 1;
     @include grid.base-flex-container;
     gap: 1rem;
 
@@ -39,111 +58,120 @@
 }
 
 @include breakpoints.md {
-  .menu {
-    .menu-btn {
-      cursor: pointer;
-      text-align: center;
-      font-size: variables.$font-size-sm;
-      text-transform: capitalize;
-      font-weight: 600;
-      letter-spacing: -0.5px;
-      padding: 0.5rem;
-      border-radius: 3px;
-      transition: 0.3s;
-    }
-    .menu-btn:hover {
-      background-color: map-get(
-        variables.$light-theme-colors,
-        "secondary-color"
-      );
+  .header {
+    // position: fixed;
+
+    .category {
+      // position: fixed;
+      margin: 0;
+      width: auto;
+      display: block;
     }
 
-    .md-screen-nav {
-      // display: none;
-      background-color: map-get(variables.$light-theme-colors, "bg-color");
-      height: 100%;
-
-      // padding: 0 1.75rem;
-      padding: 0;
-      // width: 60vh;
-      width: 0;
-      // opacity: 1;
-      opacity: 0;
-      // z-index: 1;
-      z-index: 0;
-
-      overflow: hidden;
-      position: absolute;
-      right: 0;
-      top: 0;
-
-      box-shadow: variables.$base-box-shadow;
-      transition: 0.3s;
-      // border: 1px solid black;
-
-      .exit-container {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        height: 2rem;
-        width: 100%;
-
-        svg {
-          font-size: 1.75rem;
-        }
-
-        svg:hover {
-          color: #000;
-        }
-      }
-
-      .search-container {
-        position: relative;
-        padding: 0.5rem;
-        display: flex;
-        align-items: center;
-        width: 100%;
-        height: 40px;
-        // border: 1px solid black;
+    .menu {
+      .menu-btn {
+        cursor: pointer;
         text-align: center;
+        font-size: variables.$font-size-sm;
+        text-transform: capitalize;
+        font-weight: 500;
+        letter-spacing: -0.5px;
+        padding: 0.5rem;
+        border-radius: 3px;
+        transition: 0.3s;
+      }
+      .menu-btn:hover {
+        background-color: map-get(
+          variables.$light-theme-colors,
+          "secondary-color"
+        );
+      }
 
-        svg {
-          z-index: 2;
-        }
+      .md-screen-nav {
+        // display: none;
+        background-color: map-get(variables.$light-theme-colors, "bg-color");
+        height: 100vh;
 
-        input {
-          // color: map-get(variables.$light-theme-colors, "font-color");
-          border-radius: 3px;
-          outline: none;
-          background-color: map-get(
-            variables.$light-theme-colors,
-            "secondary-color"
-          );
-          border: none;
-          font-size: variables.$font-size-sm;
-          font-weight: 600;
-          padding: 0.5rem 1rem 0.5rem 2.5rem;
-          // margin: 0 0.5rem;
+        padding: 0;
+        width: 0;
+        opacity: 0;
+
+        // overflow: hidden;
+        position: absolute;
+        right: 0;
+        top: 0;
+        z-index: 99;
+
+        box-shadow: variables.$base-box-shadow;
+        transition: 0.3s;
+
+        .exit-container {
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+          height: 2rem;
           width: 100%;
-          height: 100%;
-          top: 0;
-          left: 0;
-          right: 0;
-          z-index: 1;
-          position: absolute;
-          opacity: 0.8;
-          letter-spacing: 0.5px;
-          transition: 0.3s;
+
+          svg {
+            font-size: 1.75rem;
+          }
+
+          svg:hover {
+            color: #000;
+          }
         }
-        input:focus {
-          border: 2px solid
-            map-get(variables.$light-theme-colors, "primary-color");
+
+        .search-container {
+          position: relative;
+          padding: variables.$base-padding;
+          display: flex;
+          align-items: center;
+          width: 100%;
+          height: 40px;
+          // border: 1px solid black;
+          text-align: center;
+
+          svg {
+            position: absolute;
+            left: 0.75rem;
+            z-index: 99;
+            color: map-get(variables.$light-theme-colors, "font-color");
+          }
+
+          input {
+            color: map-get(variables.$light-theme-colors, "font-color");
+            border-radius: 3px;
+            outline: none;
+            background-color: map-get(
+              variables.$light-theme-colors,
+              "secondary-color"
+            );
+            border: none;
+            font-size: variables.$font-size-sm;
+            font-weight: 600;
+            padding: 0.5rem 1rem 0.5rem 2.5rem;
+            // margin: 0 0.5rem;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 3;
+            position: absolute;
+            opacity: 0.8;
+            letter-spacing: 0.5px;
+            transition: 0.3s;
+          }
+          input:focus {
+            border: 2px solid
+              map-get(variables.$light-theme-colors, "secondary-color");
+          }
         }
       }
-    }
 
-    .md-screen-nav > * {
-      margin: 1rem 0;
+      .md-screen-nav > * {
+        margin: 1rem 0;
+      }
     }
   }
 }
