--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@use "./variables";
 
 * {
   margin: 0;
@@ -7,7 +7,16 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  margin: 0 auto;
+  font-family: variables.$primary-font;
+  // max-width: 1440px;
+}
+
+#root {
+  min-height: 100vh;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 a {
