--- a/src/features/shop/page/charging/_charging.scss
+++ b/src/features/shop/page/charging/_charging.scss
@@ -1,4 +1,4 @@
-@use "../../../styles/variables";
+@use "../../../../styles/variables";
 
 .charging-section {
   margin: variables.$base-section-margin;
