--- a/src/features/footer/_footer.scss
+++ b/src/features/footer/_footer.scss
@@ -31,11 +31,13 @@
 
 @include breakpoints.sm {
   .footer-section {
+    padding: 0.5rem;
     .content {
       flex-direction: column;
 
       p {
         margin: variables.$base-margin;
+        font-size: variables.$font-size-xsm;
       }
     }
   }
