finished the seperation of category and sub-category and displayed it to the category page. Also added the onHover functionalities which displays the 2nd image if there's 2nd pic and displays the quick add button for adding to cart.

--- a/src/features/cart/_cart.scss
+++ b/src/features/cart/_cart.scss
@@ -1,6 +1,6 @@
-@use "../../../styles/breakpoints";
-@use "../../../styles/variables";
-@use "../../../styles/grid";
+@use "../../styles/breakpoints";
+@use "../../styles/variables";
+@use "../../styles/grid";
 
 .cart-section {
   margin: variables.$base-section-margin;
