--- a/src/features/cart/_cartButton.scss
+++ b/src/features/cart/_cartButton.scss
@@ -1,4 +1,4 @@
-@use "../../../styles/variables";
+@use "../../styles/variables";
 
 a {
   color: map-get(variables.$light-theme-colors, "font-color");
