--- a/src/features/shop/_hero.scss
+++ b/src/features/shop/_hero.scss
@@ -1,6 +1,6 @@
-@use "../../../styles/breakpoints";
-@use "../../../styles/variables";
-@use "../../../styles/grid";
+@use "../../styles/breakpoints";
+@use "../../styles/variables";
+@use "../../styles/grid";
 
 //   border: 1px solid red;
 
