--- a/src/features/shop/shop-category/_homeLifestyle.scss
+++ b/src/features/shop/shop-category/_homeLifestyle.scss
@@ -1,6 +1,6 @@
-@use "../../../../styles/grid";
-@use "../../../../styles/variables";
-@use "../../../../styles/breakpoints";
+@use "../../../styles/grid";
+@use "../../../styles/variables";
+@use "../../../styles/breakpoints";
 
 .home-lifestyle-section {
   position: relative;
