--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -5,7 +5,8 @@
 .header {
   position: fixed;
   width: 100%;
-  padding: variables.$base-padding;
+  // padding: variables.$base-padding;
+  padding: 0.75rem 3rem;
   // padding: 0 1rem;
   display: flex;
   justify-content: space-between;
@@ -66,7 +67,7 @@
   }
 }
 
-@include breakpoints.md {
+@include breakpoints.lg {
   .header {
     // position: fixed;
 
@@ -182,6 +183,12 @@
         margin: 1rem 0;
       }
     }
+  }
+}
+
+@include breakpoints.md {
+  .header {
+    padding: 0.75rem 1rem;
   }
 }
 
