--- a/src/features/shop/_best-sellers.scss
+++ b/src/features/shop/_best-sellers.scss
@@ -1,5 +1,5 @@
-@use "../../../styles/variables";
-@use "../../../styles/breakpoints";
+@use "../../styles/variables";
+@use "../../styles/breakpoints";
 
 .best-sellers-section {
   margin: variables.$base-margin;
