finished inputing data. I discovered that the sub-category should have its own route for men, women and kids. Try to add it next and then also try to add the header hover dropdown and react-scroll for clicking to a tag and then scrolling to it inside the category page.

--- a/src/features/products/_productList.scss
+++ b/src/features/products/_productList.scss
@@ -8,9 +8,28 @@
   .product-img {
     display: flex;
     position: relative;
-    // height: 100%;
 
-    .quick-add {
+    a {
+      position: relative;
+      .out-of-stock {
+        position: absolute;
+        top: 0;
+        left: 0;
+        text-transform: capitalize;
+        background-color: map-get(
+          variables.$light-theme-colors,
+          "primary-color"
+        );
+        color: map-get(variables.$light-theme-colors, "bg-color");
+        padding: 0.75rem 0.3rem;
+        font-weight: 600;
+        letter-spacing: 0.25px;
+        font-size: variables.$base-font-size;
+      }
+    }
+
+    .quick-add,
+    .view-details {
       position: absolute;
       //   display: flex;
       align-items: center;
