--- a/src/features/category/_categoryPage.scss
+++ b/src/features/category/_categoryPage.scss
@@ -4,11 +4,18 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: auto;
-  width: 95%;
+  width: 92.5%;
   margin: 5rem auto 0 auto;
-  gap: 4rem;
+  gap: 3rem;
 
   .category-header {
+    h1 {
+      text-transform: capitalize;
+      font-weight: 400;
+    }
+  }
+
+  .subCategory-header {
     h1 {
       text-transform: capitalize;
       font-weight: 400;
@@ -23,13 +30,6 @@
     grid-auto-rows: auto;
     gap: 2rem;
 
-    .subCategory-header {
-      h1 {
-        text-transform: capitalize;
-        font-weight: 400;
-      }
-    }
-
     .tags-header {
       h3 {
         text-transform: capitalize;
@@ -40,7 +40,9 @@
     .tags-content {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
+      // grid-auto-rows: minmax(100px, auto);
       gap: 3rem;
+      margin-bottom: 1rem;
     }
   }
 }
