--- a/src/features/category/_categoryPage.scss
+++ b/src/features/category/_categoryPage.scss
@@ -15,45 +15,54 @@
     }
   }
 
-  .subCategory-header {
-    h1 {
-      text-transform: capitalize;
-      font-weight: 400;
-    }
-  }
-
-  .charging-content,
-  .apparel-content,
-  .lifestyle-content {
+  .content-section {
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: auto;
-    gap: 2rem;
+    gap: 3rem;
 
-    .tags-header {
-      h3 {
+    .subCategory-header {
+      h1 {
         text-transform: capitalize;
         font-weight: 400;
       }
     }
 
-    .tags-content {
+    .charging-content,
+    .apparel-content,
+    .lifestyle-content {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      // grid-auto-rows: minmax(100px, auto);
-      gap: 3rem;
-      margin-bottom: 1rem;
+      grid-template-columns: 1fr;
+      grid-auto-rows: auto;
+      gap: 2rem;
+
+      .tags-header {
+        h3 {
+          text-transform: capitalize;
+          font-weight: 400;
+        }
+      }
+
+      .tags-content {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        // grid-auto-rows: minmax(100px, auto);
+        gap: 3rem;
+        // margin-bottom: 1rem;
+      }
     }
   }
 }
 
 @include breakpoints.xl {
   .category-page {
-    .charging-content,
-    .apparel-content,
-    .lifestyle-content {
-      .tags-content {
-        gap: 2.5rem;
+    .content-section {
+      .charging-content,
+      .apparel-content,
+      .lifestyle-content {
+        .tags-content {
+          gap: 2.5rem;
+        }
       }
     }
   }
@@ -61,11 +70,13 @@
 
 @include breakpoints.lg {
   .category-page {
-    .charging-content,
-    .apparel-content,
-    .lifestyle-content {
-      .tags-content {
-        gap: 2rem;
+    .content-section {
+      .charging-content,
+      .apparel-content,
+      .lifestyle-content {
+        .tags-content {
+          gap: 2rem;
+        }
       }
     }
   }
@@ -74,12 +85,14 @@
 @include breakpoints.md {
   .category-page {
     gap: 3rem;
-    .charging-content,
-    .apparel-content,
-    .lifestyle-content {
-      gap: 1.75rem;
-      .tags-content {
-        gap: 1.5rem;
+    .content-section {
+      .charging-content,
+      .apparel-content,
+      .lifestyle-content {
+        gap: 1.75rem;
+        .tags-content {
+          gap: 1.5rem;
+        }
       }
     }
   }
@@ -89,13 +102,15 @@
   .category-page {
     width: 90%;
     gap: 2.5rem;
-    .charging-content,
-    .apparel-content,
-    .lifestyle-content {
-      gap: 1.5rem;
-      .tags-content {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 2rem;
+    .content-section {
+      .charging-content,
+      .apparel-content,
+      .lifestyle-content {
+        gap: 1.5rem;
+        .tags-content {
+          grid-template-columns: repeat(2, 1fr);
+          gap: 2rem;
+        }
       }
     }
   }
@@ -104,12 +119,14 @@
 @include breakpoints.sm {
   .category-page {
     gap: 2rem;
-    .charging-content,
-    .apparel-content,
-    .lifestyle-content {
-      gap: 1rem;
-      .tags-content {
+    .content-section {
+      .charging-content,
+      .apparel-content,
+      .lifestyle-content {
         gap: 1rem;
+        .tags-content {
+          gap: 1rem;
+        }
       }
     }
   }
