managed to create the cartSlice but cant manage to find and connect the adapter to the cart, it's somehow hard to connect them. I managed to find to create it using localStorage which is better I think. It's not yet complete, it still need to connect the totalQuantity and the totalAmount.

--- a/src/features/products/_productList.scss
+++ b/src/features/products/_productList.scss
@@ -10,6 +10,9 @@
     position: relative;
 
     a {
+      .lazy-load-image-background.blur.lazy-load-image-loaded {
+        display: block !important;
+      }
       position: relative;
       .out-of-stock {
         position: absolute;
