--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -50,6 +50,7 @@ $base-box-shadow: -3px 3px 5px rgba(0, 0, 0, 0.1);
 // font-size
 $base-svg-size: 1.5rem;
 $base-font-size: 1rem;
+$font-size-xxsm: $base-font-size * 0.65;
 $font-size-xsm: $base-font-size * 0.75;
 $font-size-sm: $base-font-size * 0.9;
 $font-size-lg: $base-font-size * 1.25;
