--- a/src/features/cart/_cartButton.scss
+++ b/src/features/cart/_cartButton.scss
@@ -1,10 +1,26 @@
 @use "../../styles/variables";
 
 a {
+  position: relative;
   color: map-get(variables.$light-theme-colors, "font-color");
   svg {
     font-size: variables.$base-svg-size;
     cursor: pointer;
+  }
+  .cartQuantity {
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: -5px;
+    color: map-get(variables.$light-theme-colors, "bg-color");
+    background-color: #3e6ae1;
+    border-radius: 50%;
+    padding: 1px 3px;
+    font-size: variables.$font-size-xxsm;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
   }
 }
 
