--- a/src/features/cart/_cart.scss
+++ b/src/features/cart/_cart.scss
@@ -4,7 +4,8 @@
 
 .cart-section {
   margin: variables.$base-section-margin;
-  width: 75%;
+  max-width: 1440px;
+  width: 80%;
   height: 100%;
   flex-grow: 1;
   font-family: variables.$primary-font-book;
@@ -25,16 +26,12 @@
   .content {
     width: 100%;
     height: 100%;
-    // margin: variables.$base-margin;
     margin: 0 auto;
     padding: variables.$base-padding;
-    flex-grow: 1;
-
     gap: 12%;
 
     .content-list {
       width: 49%;
-      // border: 1px solid blue;
       display: flex;
       flex-direction: column;
       gap: 2.5rem;
@@ -47,6 +44,7 @@
         .image-container {
           overflow: hidden;
           width: 100px;
+          min-width: 100px;
 
           img {
             height: 100%;
@@ -63,18 +61,31 @@
           font-size: variables.$font-size-sm;
 
           .details {
-            // display: flex;
-            // flex-direction: column;
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
             // justify-content: center;
-            p {
-              line-height: 1.8;
-            }
+
             .details-actions {
               display: flex;
-              gap: 1.5rem;
+              gap: 0.25rem;
               font-family: variables.$primary-font-light;
               font-weight: 600;
               color: map-get(variables.$light-theme-colors, "font-color");
+              align-items: center;
+
+              #quantity {
+                border: 1px solid
+                  map-get(variables.$light-theme-colors, "bg-color");
+                font-size: 0.9rem;
+                color: map-get(variables.$light-theme-colors, "font-color");
+                outline: none;
+                padding: 3px 1px;
+              }
+              #quantity:focus {
+                border: 1px dashed
+                  map-get(variables.$light-theme-colors, "font-color");
+              }
 
               button {
                 background-color: transparent;
@@ -87,6 +98,7 @@
                   map-get(variables.$light-theme-colors, "font-color");
                 transition: 0.3s;
                 cursor: pointer;
+                margin: 0 0.5rem;
               }
               button:hover {
                 border-bottom: 2.5px solid
@@ -96,6 +108,7 @@
           }
           .price {
             line-height: 1.5;
+            margin-left: 0.5rem;
           }
         }
       }
@@ -103,7 +116,10 @@
 
     .order-summary {
       // border: 1px solid green;
+      position: sticky;
+      top: 4rem;
       border-radius: 3px;
+      min-width: 380px;
       width: 39%;
       height: 100%;
       box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.16);
@@ -267,10 +283,19 @@
   }
 }
 
+@include breakpoints.lg {
+  .cart-section {
+    width: 90%;
+    .content {
+      gap: 2rem;
+    }
+  }
+}
+
 @include breakpoints.md {
   .cart-section {
     height: 100%;
-    width: 70%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -283,6 +308,23 @@
     .content {
       @include grid.base-flex-container;
       flex-direction: column;
+
+      .content-list {
+        width: 95%;
+      }
+
+      .order-summary {
+        width: 95%;
+        position: static;
+        top: 4rem;
+        border-radius: none;
+        min-width: 380px;
+        border: none;
+        border-top: 1px solid black;
+        box-shadow: none;
+        padding: 0;
+        padding-top: 2rem;
+      }
 
       .message {
         text-align: center;
@@ -309,6 +351,28 @@
 
     .content {
       width: 100%;
+
+      .order-summary {
+        min-width: 0;
+      }
+
+      .content-list {
+        li {
+          gap: 0;
+
+          .details-container {
+            .details {
+              .details-actions {
+                display: block;
+
+                button {
+                  margin: 0;
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
