--- a/src/features/cart/_cartButton.scss
+++ b/src/features/cart/_cartButton.scss
@@ -10,12 +10,13 @@ a {
   .cartQuantity {
     display: flex;
     position: absolute;
-    top: 0;
-    right: -5px;
+    top: -3px;
+    right: -7px;
     color: map-get(variables.$light-theme-colors, "bg-color");
     background-color: #3e6ae1;
     border-radius: 50%;
-    padding: 1px 3px;
+    height: 1rem;
+    width: 1rem;
     font-size: variables.$font-size-xxsm;
     display: flex;
     align-items: center;
