finished the search page and search functionalities. But, there's a problem, when adding item to cart in productDetails and then adding more than 1 item, it seems that the cartSlice is receiving only 1 quantity and not the quantity which is displayed in the input which should alert that the quantity should not be more than 5.

--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -143,7 +143,7 @@
 
           svg {
             position: absolute;
-            left: 0.75rem;
+            right: -1.25rem;
             z-index: 99;
             color: map-get(variables.$light-theme-colors, "font-color");
           }
