--- a/src/features/cart/_cartButton.scss
+++ b/src/features/cart/_cartButton.scss
@@ -1,8 +1,11 @@
 @use "../../styles/variables";
 
-a {
+.cartButton,
+.cartButton-active {
   position: relative;
   color: map-get(variables.$light-theme-colors, "font-color");
+  display: flex;
+
   svg {
     font-size: variables.$base-svg-size;
     cursor: pointer;
@@ -22,6 +25,25 @@ a {
     align-items: center;
     justify-content: center;
     text-align: center;
+    animation: bump 300ms ease-out;
+  }
+
+  @keyframes bump {
+    0% {
+      transform: scale(1);
+    }
+    10% {
+      transform: scale(1.5);
+    }
+    30% {
+      transform: scale(2);
+    }
+    50% {
+      transform: scale(1.5);
+    }
+    100% {
+      transform: scale(1);
+    }
   }
 }
 
