--- a/src/features/products/_productDetail.scss
+++ b/src/features/products/_productDetail.scss
@@ -122,6 +122,10 @@
             padding: 0.75rem 2.5rem;
             border-radius: 3px;
           }
+
+          .disabled {
+            cursor: not-allowed !important;
+          }
         }
       }
 
