--- a/src/features/shop/_best-sellers.scss
+++ b/src/features/shop/_best-sellers.scss
@@ -38,7 +38,7 @@
       display: flex;
       flex-direction: column;
       //   border: 1px solid red;
-      height: 40vw;
+      // height: 40vw;
 
       img {
         height: 90%;
@@ -60,6 +60,7 @@
           text-align: justify;
           font-size: 1.15rem;
           font-weight: 400;
+          color: map-get(variables.$light-theme-colors, "font-color");
         }
       }
     }
@@ -77,7 +78,7 @@
     }
     .content {
       .slider {
-        height: 50vw;
+        // height: 50vw;
 
         .best-sellers-slide-content {
           p {
@@ -101,7 +102,7 @@
     .content {
       margin-bottom: 0;
       .slider {
-        height: 100vw;
+        // height: 100vw;
       }
     }
   }
