fix the problem and then fix the color in view details and also we encounter another problem which is the when in smaller viewport and toggling the menu bar to search, it doesn't have the search functionalities yet.

--- a/src/features/products/_productList.scss
+++ b/src/features/products/_productList.scss
@@ -38,6 +38,7 @@
     .quick-add,
     .view-details {
       position: absolute;
+      color: map-get(variables.$light-theme-colors, "heading-color");
       //   display: flex;
       align-items: center;
       justify-content: center;
