--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -132,50 +132,8 @@
         }
 
         .search-container {
-          position: relative;
-          padding: variables.$base-padding;
-          display: flex;
-          align-items: center;
+          // position: relative;
           width: 100%;
-          height: 40px;
-          // border: 1px solid black;
-          text-align: center;
-
-          svg {
-            position: absolute;
-            right: -1.25rem;
-            z-index: 99;
-            color: map-get(variables.$light-theme-colors, "font-color");
-          }
-
-          input {
-            color: map-get(variables.$light-theme-colors, "font-color");
-            border-radius: 3px;
-            outline: none;
-            background-color: map-get(
-              variables.$light-theme-colors,
-              "secondary-color"
-            );
-            border: none;
-            font-size: variables.$font-size-sm;
-            font-weight: 600;
-            padding: 0.5rem 1rem 0.5rem 2.5rem;
-            // margin: 0 0.5rem;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 3;
-            position: absolute;
-            opacity: 0.8;
-            letter-spacing: 0.5px;
-            transition: 0.3s;
-          }
-          input:focus {
-            border: 2px solid
-              map-get(variables.$light-theme-colors, "secondary-color");
-          }
         }
       }
 
